<resources>
    <string name="app_name">Remote Assistance Application</string>
    <string name="title_activity_friend_list">Friend list</string>
    <string name="friend_img_dsc">My Picture</string>
    <string name="friend_list_empty">No friends exist</string>
    <string name="friend_list_loading">Loading…</string>
    <string name="error_msg_net">NetWork cannot be connected</string>
    <string name="error_msg_json">A json string is need </string>
    <string name="error_msg_add">Fail to add a friend</string>
    <string name="error_msg_del">Fail to delete a friend</string>
    <string name="error_invalid_code">Qrcode is invalid</string>
    <string name="menu_qrcode">My qrcode</string>
    <string name="menu_settings">Settings</string>my_qrcode_dsc
    <string name="my_qrcode_dsc">My Qrcode</string>
    <string name="qrcode_disc">Scan the qrcode to add friend</string>
    <string name="setting_login">Login in/up</string>
    <string name="setting_login_dsc">To log in your account if have, or register a new</string>
    <string name="setting_logout">Login out</string>
    <string name="setting_logout_dsc">To log out your account</string>
    <string name="setting_my_detail">My Details</string>
    <string name="login_title">From here, please input your number and password…</string>
    <string name="title_phone">Phone number:</string>
    <string name="prompt_phone">Please input your phone number</string>
    <string name="title_password">Your password:</string>
    <string name="prompt_password">Please input your password</string>
    <string name="title_code">Your code:</string>
    <string name="prompt_code">Please input the code you received</string>
    <string name="send_code">Send code</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_logon">Logon</string>
    <string name="to_logon">No account, try to logon</string>
    <string name="to_login">Have an account, to login</string>
    <string name="fail_to_logon">Fail to logon</string>
    <string name="fail_to_login">Fail to login</string>

    <string name="number_is_empty">Number cannot be empty</string>
    <string name="number_is_invalid">Invalid number</string>
    <string name="pwd_is_empty">Password cannot be empty</string>
    <string name="pwd_is_invalid">Length of password need between 8 to 15 </string>
    <string name="code_is_empty">Please input the code</string>
    <string name="detail_name_title">"Your name: "</string>
    <string name="detail_name_hint">Please input the name</string>
    <string name="detail_name_content">You have not set your name</string>
    <string name="detail_image_title">"Your image: "</string>
    <string name="detail_menu_edit">Edit</string>
    <string name="detail_menu_done">Done</string>

    <string name="detail_app_title">Personal information</string>
    <string name="login_app_title">Login</string>
    <string name="setting_app_title">Settings</string>
    <string name="qrcode_app_title">My qrcode</string>

    <string name="start_record">Press to speak</string>
    <string name="in_record">Recording…</string>
    <string name="menu_delete">Select to delete</string>
    <string name="text_delete">Delete</string>
    <string name="menu_cancel_delete">Unselect delete</string>

    <string name="update_version_title">Application upgrade</string>
    <string name="update_version_content">The application is in upgrade…</string>
</resources>
